# Specify svgbob_cli via Cargo.toml so that Renovate can help with updates

[package]
name = "not_a_real_packages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "not_a_real_bin"
path = "/home/rust/not_a_real_path"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svgbob_cli = "0.5.3"
